--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <div class="full-container">
       <div class="login-container">
         <div class="form-container">
-          <form class="login-form" action="" method="POST">
+          <form class="styled-form" id="login-form" action="" method="POST">
             <div class="logo-container">
               <img
                 src="/images/Logo-Web-De-Todito.png"
@@ -24,7 +24,6 @@
 
             <div class="form-input">
               <label for="username" class="form-label">Email</label>
-              <!-- removed required attribute to let JS manejar validación -->
               <input
                 id="username"
                 name="username"
@@ -45,7 +44,6 @@
             <!-- Password -->
             <div class="form-input">
               <label for="password" class="form-label">Contraseña</label>
-              <!-- removed required attribute to let JS manejar validación -->
               <input
                 type="password"
                 id="password"
@@ -79,16 +77,15 @@
                 <img src="/images/google.png" alt="Google" />
                 Iniciar con Google
               </button>
-              <div class="register">
+              <div class="account">
                 <p>
                   ¿No estás registrado?
-                  <a class="register-link" href="registro.html">¡Hazlo ahora!</a>
+                  <a class="account-link" href="registro.html">¡Hazlo ahora!</a>
                 </p>
               </div>
             </div>
           </form>
         </div>
-        <!-- <div class="right-background"></div> -->
       </div>
     </div>
     <script src="/scripts/validacion.js"></script>
