agregar link a inicio desde los logos de login, recuperar y registro; agregar texto flotante que indique donde clickear

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        <img
-          src="/images/Logo-Web-De-Todito.png"
-          alt="Logo de De Todito Polirubro"
-        />
+        <a href="index.html">
+          <img
+            src="/images/Logo-Web-De-Todito.png"
+            alt="Logo de De Todito Polirubro"
+          />
+        </a>
       </div>
 
       <div class="search-bar">
@@ -117,7 +119,10 @@
     <main class="productos">
       <div class="card">
         <div class="card-image">
-          <img src="/images/bolso-matero-unicross.jpg" alt="Bolso Matero marca Unicross" />
+          <img
+            src="/images/bolso-matero-unicross.jpg"
+            alt="Bolso Matero marca Unicross"
+          />
         </div>
         <div class="card-content">
           <div class="product-info">
@@ -215,7 +220,10 @@
       </div>
       <div class="card">
         <div class="card-image">
-          <img src="/images/manta-plush-acanalada.jpg" alt="Manta Plush Acanalada" />
+          <img
+            src="/images/manta-plush-acanalada.jpg"
+            alt="Manta Plush Acanalada"
+          />
         </div>
         <div class="card-content">
           <div class="product-info">
