--- a/Recuperar.html
+++ b/Recuperar.html
@@ -22,7 +22,7 @@
             <div class="logo-container">
               <img src="images/recuperar.png" alt="logo" loading="lazy" />
             </div>
-            <h1 class="login-title">Recuperar Contraseña</h1>
+            <h1 class="recovery-title">Recuperar Contraseña</h1>
             <div class="form-input">
               <label for="email" class="form-label">Email</label>
               <input
@@ -45,10 +45,7 @@
               <button type="submit" class="btn btn-login">Enviar</button>
             </div>
             <!-- Mensaje de confirmación que se mostrará después de enviar -->
-            <div
-              id="confirmation-message"
-              style="display: none; margin-top: 20px"
-            >
+            <div id="confirmation-message">
               <p>
                 Se ha enviado un mensaje de verificación al siguiente correo:
                 <b><span id="user-email"></span></b>
@@ -57,8 +54,12 @@
 
             <div class="account">
               <p>
-                Ya podés ingresar a tu cuenta?
-                <a class="account-link" href="login.html">Volver a iniciar sesión</a>
+                ¿Ya podés ingresar a tu cuenta?
+                <a class="account-link" href="login.html">Accedé.</a>
+              </p>
+              <p>
+                Volver al 
+                <a class="account-link" href="index.html">Inicio.</a>
               </p>
             </div>
           </form>
