--- a/login.html
+++ b/login.html
@@ -14,11 +14,13 @@
         <div class="form-container">
           <form class="styled-form" id="login-form" action="" method="POST">
             <div class="logo-container">
-              <img
-                src="/images/Logo-Web-De-Todito.png"
-                alt="Logo De Todito"
-                loading="lazy"
-              />
+              <a href="index.html">
+                <img
+                  src="/images/Logo-Web-De-Todito.png"
+                  alt="Logo De Todito"
+                  loading="lazy"
+                />
+              </a>
             </div>
             <h1 class="login-title">¡BIENVENIDO!</h1>
 
@@ -67,7 +69,9 @@
                 <label for="remember">Recordarme</label>
               </div>
               <div>
-                <a href="Recuperar.html" class="forgot-password">Olvidé mi clave</a>
+                <a href="Recuperar.html" class="forgot-password"
+                  >Olvidé mi clave</a
+                >
               </div>
             </div>
 
