--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
       <div class="card">
         <div class="card-image">
-          <img src="images/bufanda.jpg" alt="Bufanda marca" />
+          <img src="/images/bufanda.jpg"  alt="Bufanda marca" />
         </div>
         <div class="card-content">
           <div class="product-info">
