--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <div class="full-container">
       <div class="login-container">
         <div class="form-container">
-          <form class="styled-form" id="login-form" action="" method="POST">
+          <form class="styled-form" id="login-form" action="/index-logued.html">
             <div class="logo-container">
               <a href="index.html">
                 <img
