--- a/categorias/blanqueria.html
+++ b/categorias/blanqueria.html
@@ -130,7 +130,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="/scripts/categorias.js"></script>
-    <script src="/scripts/listas.js"></script>
-    <script src="/scripts/productos.js"></script>
+  <script src="/scripts/listas.js"></script>
+  <script src="/scripts/productos.js"></script>
+  <script src="/scripts/proximamente.js"></script>
   </body>
 </html>
