--- a/categorias/marroquineria.html
+++ b/categorias/marroquineria.html
@@ -132,5 +132,6 @@
     <script src="/scripts/categorias.js"></script>
     <script src="/scripts/listas.js"></script>
     <script src="/scripts/productos.js"></script>
+    <script src="/scripts/proximamente.js"></script>
   </body>
 </html>
