--- a/favoritos.html
+++ b/favoritos.html
@@ -115,4 +115,5 @@
   <script src="/scripts/categorias.js"></script>
   <script src="/scripts/productos.js"></script>
   <script src="/scripts/favoritos.js"></script>
+  <script src="/scripts/proximamente.js"></script>
 </html>
