--- a/index-logued.html
+++ b/index-logued.html
@@ -204,4 +204,5 @@
   <script src="/scripts/listas.js"></script>
   <script src="/scripts/categorias.js"></script>
   <script src="/scripts/productos.js"></script>
+  <script src="/scripts/proximamente.js"></script>
 </html>
