agregar modal para mostrar mensaje de producto agregado a carrito

--- a/favoritos.html
+++ b/favoritos.html
@@ -51,9 +51,7 @@
 
     <!-- NAV -->
     <nav>
-      <button class="category" id="category-btn">
-        Categorías <i class="fa-solid fa-chevron-down"></i>
-      </button>
+      <a href="index-logued.html"><button>Productos</button></a>
       <button>Oferta</button>
       <button>Vender</button>
       <button>Favoritos</button>
@@ -114,6 +112,7 @@
   <script src="/scripts/listas.js"></script>
   <script src="/scripts/categorias.js"></script>
   <script src="/scripts/productos.js"></script>
+  <script src="/scripts/carrito-modal.js"></script>
   <script src="/scripts/favoritos.js"></script>
   <script src="/scripts/proximamente.js"></script>
 </html>
