--- a/index-logued.html
+++ b/index-logued.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        <a href="index.html">
+        <a href="index-logued.html">
           <img
             src="/images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
@@ -186,8 +186,8 @@
         <div class="footer-social">
           <p>¡Seguinos en nuestras redes!</p>
           <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://m.facebook.com/61578328675321/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
           </div>
         </div>
       </div>
