Fix source paths in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="/images/Logo-Web-De-Todito.png"
+            src="images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
           />
         </a>
@@ -91,28 +91,28 @@
 
       <div class="imagenes">
         <video
-          src="/images/BANNER1.mp4"
+          src="images/BANNER1.mp4"
           alt="Banner 1"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER2.mp4"
+          src="images/BANNER2.mp4"
           alt="Banner 2"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER3.mp4"
+          src="images/BANNER3.mp4"
           alt="Banner 3"
           autoplay
           muted
           loop
         ></video>
-        <img src="/images/BANNER2.png" alt="Banner 4" />
-        <img src="/images/BANNER3.png" alt="Banner 5" />
+        <img src="images/BANNER2.png" alt="Banner 4" />
+        <img src="images/BANNER3.png" alt="Banner 5" />
       </div>
 
       <div class="dots" role="tablist" aria-label="Indicadores del carrusel">
@@ -194,9 +194,9 @@
     src="https://kit.fontawesome.com/38dd05b7b5.js"
     crossorigin="anonymous"
   ></script>
-  <script src="/scripts/carrusel.js"></script>
-  <script src="/scripts/listas.js"></script>
-  <script src="/scripts/categorias.js"></script>
-  <script src="/scripts/productos.js"></script>
-  <script src="/scripts/proximamente.js"></script>
+  <script src="scripts/carrusel.js"></script>
+  <script src="scripts/listas.js"></script>
+  <script src="scripts/categorias.js"></script>
+  <script src="scripts/productos.js"></script>
+  <script src="scripts/proximamente.js"></script>
 </html>
